@@ -30,8 +30,9 @@
     line-height: 0;
     
     > * {
-        font-size: 10pt;
+        font-size: 10pt !important;
         line-height: 2em;
+        vertical-align: bottom;
 
         &:not(:link):not([rel=self]) {
             color: $choose-blind-color;
